Bug 1649278 - Don't do PreventDefault for escape key if <select> dropdown is not shown r=smaug

We always use PreventDefault for <select> element, which is
problematic if modal dialog is on as it prevents cancelling
the dialog.

We fix it by not blocking the default action if <select> is
not shown.

Differential Revision: https://phabricator.services.mozilla.com/D82590